# senko

./: .gitignore  CMakeLists.txt  DEV_SETUP.md  DOCS.md  README.md  SPEED.md  THIRD_PARTY_LICENSES  WINDOWS.md  pyproject.toml
evaluation/: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  senko_pipeline.py
evaluation/old/: .gitignore  README.md  ami.py  eval.py
senko/: config.py  diarizer.py  warning_filters.py
senko/fbank_extractor/: CMakeLists.txt
senko/fbank_extractor/cpp/: fbank_extractor.cpp
senko/fbank_extractor/cpp/feature/: fbank_utils.h  frame_processor.h
senko/fbank_extractor/include/: fbank_interface.h
senko/vad_coreml/: CMakeLists.txt  README.md  vad_lib.swift
tracing/: README.md
